--- a/app/src/main/res/layout/fragment_main_chat.xml
+++ b/app/src/main/res/layout/fragment_main_chat.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Wallet"
+            android:text="Chat"
             android:gravity="center_horizontal|center_vertical"/>
     </LinearLayout>
 
