--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -6,34 +6,40 @@
     android:backgroundTint="@color/white"
     tools:context=".Activities.Main.Fragment.MainHomeFragment">
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="16dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:layout_weight="1"/>
+            <fragment
+                android:id="@+id/autocompleteSupportFragment"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white" />
 
             <ImageButton
                 android:id="@+id/current_location_button"
                 android:layout_width="60dp"
-                android:layout_height="60sp"
+                android:layout_height="60dp"
                 android:src="@drawable/ic_current_location"
-                android:translationY="-6dp"
-                android:backgroundTint="@color/white"/>
+                android:backgroundTint="@color/white" />
 
         </LinearLayout>
 
+    </LinearLayout>
 
 </FrameLayout>
