Added map type button

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:maxLines="1"/>
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -67,7 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Password"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:maxLines="1"/>
 
             </androidx.cardview.widget.CardView>
 
