--- a/app/src/main/res/layout/fragment_register_home.xml
+++ b/app/src/main/res/layout/fragment_register_home.xml
@@ -60,6 +60,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="4dp">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,7 +73,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Home"
-                    android:textSize="22sp"
+                    android:fontFamily="@font/lobster"
+                    android:textSize="30sp"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginVertical="16dp"/>
@@ -78,28 +84,34 @@
                     android:layout_height="wrap_content"
                     android:text="Please enter your home detail. \nYou can edit this in the app later."
                     android:textSize="16sp"
-                    android:layout_marginHorizontal="16dp"/>
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="20dp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Address"
+                    android:text="Address (*)"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="8dp"/>
+                    android:padding="5dp"/>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardElevation="4dp"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:cardCornerRadius="30dp">
                     <EditText
                         android:id="@+id/address_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Address"
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
+                        android:drawableLeft="@drawable/ic_home"
+                        android:drawablePadding="5dp"
                         android:textSize="18sp"/>
                 </androidx.cardview.widget.CardView>
 
@@ -130,9 +142,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:text="Done"/>
+                    android:text="Done"
+                    android:layout_marginBottom="50dp"/>
 
             </LinearLayout>
+            </ScrollView>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
