--- a/app/src/main/res/layout/fragment_register_profile.xml
+++ b/app/src/main/res/layout/fragment_register_profile.xml
@@ -59,7 +59,14 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="4dp">
+            app:cardElevation="4dp"
+            >
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,7 +75,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Profile"
-                    android:textSize="22sp"
+                    android:fontFamily="@font/lobster"
+                    android:textSize="30sp"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginVertical="16dp"/>
@@ -83,23 +91,28 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:text="Name (*)"
+                    android:padding="5dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="8dp"/>
+                    />
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardElevation="4dp"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:cardCornerRadius="30dp">
                     <EditText
                         android:id="@+id/name_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Name"
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
+
                         android:textSize="18sp"/>
                 </androidx.cardview.widget.CardView>
 
@@ -112,6 +125,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Gender:"
+                        android:padding="5dp"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:layout_marginHorizontal="16dp"
@@ -147,23 +161,29 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number"
+                    android:text="Phone Number (*)"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="8dp"/>
+                    android:padding="5dp"
+                   />
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardElevation="4dp"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="160dp">
+                    android:layout_marginBottom="160dp"
+                    app:cardCornerRadius="30dp">
                     <EditText
                         android:id="@+id/phone_number_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
+                        android:drawableLeft="@drawable/baseline_local_phone_24"
+                        android:drawablePadding="5dp"
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
                         android:textSize="18sp"/>
                 </androidx.cardview.widget.CardView>
 
@@ -172,9 +192,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:text="Done" />
+                    android:text="Done"
+                    android:layout_marginBottom="50dp"/>
 
             </LinearLayout>
+            </ScrollView>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
