--- a/app/src/main/res/layout/fragment_register_sos.xml
+++ b/app/src/main/res/layout/fragment_register_sos.xml
@@ -68,7 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="SOS"
-                    android:textSize="22sp"
+                    android:textSize="30sp"
+                    android:fontFamily="@font/lobster"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginVertical="16dp"/>
@@ -78,14 +79,15 @@
                     android:layout_height="wrap_content"
                     android:text="Enter an Emergency Contact. \nYou can share your live location and Driver Detail when you initiate the SOS action. \nYou can skip this for now and edit it in the app later."
                     android:textSize="16sp"
-                    android:layout_marginHorizontal="16dp"/>
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="20dp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="8dp"
-                    android:text="Name"
+                    android:padding="5dp"
+                    android:text="Name (*)"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -94,18 +96,22 @@
                     android:layout_height="wrap_content"
                     app:cardElevation="4dp"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:cardCornerRadius="30dp">
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Name"
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
+                        android:drawablePadding="5dp"
                         android:textSize="18sp"/>
                 </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number"
+                    android:text="Phone Number (*)"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
@@ -116,11 +122,16 @@
                     android:layout_height="wrap_content"
                     app:cardElevation="4dp"
                     android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="190dp">
+                    android:layout_marginBottom="100dp"
+                    app:cardCornerRadius="30dp">
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
+                        android:drawableLeft="@drawable/baseline_local_phone_24"
+                        android:drawablePadding="5dp"
                         android:textSize="18sp"/>
                 </androidx.cardview.widget.CardView>
 
