--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/white"
-    tools:context=".Activities.Main.Fragment.MainHomeFragment">
+    tools:context=".Activities.Main.Fragment.Home.MainHomeFragment">
 
     <fragment
         android:id="@+id/map"
