--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/splash_activity_background"
-        android:foreground="@drawable/splash_foreground">
+        android:foreground="@drawable/splash_foreground"
+        android:alpha="0.85"
+        android:scaleType="centerCrop">
 
     </ImageView>
 <LinearLayout
