--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,29 +6,29 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_vertical"
-    tools:context=".Activities.LoginActivity">
+    tools:context=".Activities.LoginActivity"
+    android:background="@color/background_color_blue">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ABER"
+        android:fontFamily="@font/queensidesmedium"
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"
+        android:textSize="65dp"
+        android:textColor="@color/black"/>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="30dp"
         android:layout_marginHorizontal="15dp"
-        app:cardElevation="4dp">
+        app:cardElevation="2dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:orientation="vertical">
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="16dp"
-                android:fontFamily="@font/lobster"
-                android:text="Login"
-                android:textAlignment="center"
-                android:textSize="56sp"
-                android:textStyle="bold" />
+            android:orientation="vertical"
+            >
 
             <TextView
 
@@ -51,17 +51,30 @@
                 android:background="@drawable/custom_edit_text"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginBottom="8dp">
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/email_layout_text"
+                    android:hint="@string/email"
+                    app:hintEnabled="false"
+                    >
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
-
+                    android:gravity="top"
+                    android:hint="@string/email"
                     android:drawableLeft="@drawable/baseline_email_24"
                     android:background="@drawable/custom_edit_text"
                     android:padding="10dp"
                     android:drawablePadding="5dp"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:minLines="1"
+                    android:textCursorDrawable="@color/black"
+
+                    />
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.cardview.widget.CardView>
 
@@ -83,26 +96,38 @@
                 app:cardCornerRadius="30dp"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginBottom="16dp">
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password"
+                    android:id="@+id/password_layout_text"
+                    app:hintEnabled="false"
+                    >
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
 
                     android:background="@drawable/custom_edit_text"
                     android:padding="10dp"
                     android:drawableLeft="@drawable/baseline_lock_24"
                     android:drawablePadding="5dp"
                     android:textSize="18sp"
-                    android:inputType="textPassword"/>
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:minLines="1"
+                    android:textColor="@color/black"
+                    android:textCursorDrawable="@color/black"
+                    />
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="15dp"
                 android:layout_marginVertical="28dp"
                 android:text="Login" />
 
