--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,57 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.SplashActivity"
-    android:background="@color/purple"
+    android:background="@color/background_color_blue"
     >
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/splash_activity_background"
-        android:foreground="@drawable/splash_foreground"
-        android:alpha="0.85"
-        android:scaleType="centerCrop">
 
-    </ImageView>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="90dp"
+        android:src="@drawable/splash_icon_512"
+        app:tint="@color/pale_blue" />
+
+
+
+</LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/DotsLoaderContainerLL"
         android:gravity="center"
-        android:layout_gravity="top"
-        android:text="@string/app_name"
-        android:layout_marginTop="50dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:fontFamily="@font/lobster"
-        android:textSize="55sp" />
-    <ImageView
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
-
-        android:src="@drawable/splash_icon"
-
         >
-
-    </ImageView>
-
-    <ProgressBar
-
-        android:layout_marginTop="90dp"
-        android:id="@+id/splashScreen_ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        <com.agrawalsuneet.dotsloader.loaders.TashieLoader
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tashieloader_animDelay="200"
+            app:tashieloader_animDur="1000"
+            app:tashieloader_dotsColor="@color/black"
+            app:tashieloader_dotsDist="5dp"
+            app:tashieloader_dotsRadius="5dp"
+            app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
+            app:tashieloader_noOfDots="3"
+            android:gravity="center"
+            android:id="@+id/splashScreen_ProgressBar"
+            android:layout_gravity="bottom"
+            android:layout_margin="30dp"/>
+    </LinearLayout>
 
 
 </RelativeLayout>
