--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -22,12 +22,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:background="@drawable/rouned_background"
+            android:elevation="5dp"
+            >
 
             <fragment
                 android:id="@+id/autocompleteSupportFragment"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="35dp"
                 android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                 android:layout_weight="1"
                 android:backgroundTint="@color/white" />
@@ -43,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="470dp"
             android:src="@drawable/ic_current_location"
             android:backgroundTint="@color/white"
@@ -56,12 +59,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="350dp"
             android:src="@drawable/ic_map_type"
             android:backgroundTint="@color/white"
             android:layout_gravity="center|right"
-            app:fabCustomSize="45dp"/>
+            app:fabCustomSize="45dp"
+            />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
