--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -30,13 +30,14 @@
                 android:id="@+id/avatar"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/ic_profile" />
+                android:src="@drawable/ic_profile_avatar" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/upload_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Upload Avatar" />
+                android:text="Upload Avatar"
+                android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -73,7 +74,7 @@
                         <EditText
                             android:id="@+id/name"
                             android:layout_width="0dp"
-                            android:layout_height="48dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
                             android:background="@drawable/custom_edit_text"
@@ -97,7 +98,7 @@
                         <EditText
                             android:id="@+id/email"
                             android:layout_width="0dp"
-                            android:layout_height="48dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
                             android:background="@drawable/custom_edit_text"
@@ -111,7 +112,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -146,7 +148,8 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -158,7 +161,7 @@
                         <EditText
                             android:id="@+id/phone"
                             android:layout_width="0dp"
-                            android:layout_height="48dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
                             android:background="@drawable/custom_edit_text"
@@ -208,7 +211,7 @@
                     <TextView
                         android:id="@+id/defaultAddress"
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
                         android:textSize="15sp"
@@ -265,7 +268,7 @@
                     <TextView
                         android:id="@+id/defaultVehicle"
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
                         android:textSize="15sp"
@@ -321,7 +324,7 @@
                             <EditText
                                 android:id="@+id/sos_name"
                                 android:layout_width="match_parent"
-                                android:layout_height="48dp"
+                                android:layout_height="wrap_content"
                                 android:text="Name"
                                 android:padding="10dp"
                                 android:layout_marginLeft="5dp"
@@ -339,7 +342,7 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/edit_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
