--- a/app/src/main/res/menu/map_type_menu.xml
+++ b/app/src/main/res/menu/map_type_menu.xml
@@ -3,7 +3,8 @@
 
     <item
         android:id="@+id/buttonNormal"
-        android:title="Default" />
+        android:title="Default"
+        />
 
     <item
         android:id="@+id/buttonSatellite"
