--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="5dp"
-        android:topLeftRadius="0dp"/>
+        android:radius="10dp"
+        android:topRightRadius="0dp"/>
 
-    <solid android:color="@color/background_color_dark_blue"/>
+    <solid android:color="@color/white"/>
 
 </shape>
