--- a/app/src/main/res/drawable/background_right.xml
+++ b/app/src/main/res/drawable/background_right.xml
@@ -5,6 +5,6 @@
         android:radius="10dp"
         android:topRightRadius="0dp"/>
 
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/right_chat_blue"/>
 
 </shape>
