--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -6,16 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Activities.Main.EditActivity.EditAddressActivity"
     android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <ImageView
+    <TextView
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:text="@string/address"
+        android:textSize="40sp"
+        android:drawablePadding="10dp"
+        android:fontFamily="@font/instagramsansregular"
         android:layout_marginTop="10dp"
-        android:src="@drawable/ic_back_arrow"
-         />
-
+        app:drawableStartCompat="@drawable/ic_back_arrow" />
+</LinearLayout>
 
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/addressRecyclerView"
