--- a/app/src/main/res/layout/chat_container.xml
+++ b/app/src/main/res/layout/chat_container.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:id="@+id/user_container"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/shadow_background">
+<androidx.cardview.widget.CardView android:id="@+id/user_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="8dp"
-    android:layout_margin="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -30,3 +32,4 @@
             android:gravity="center_vertical"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+</LinearLayout>
