--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="8dp"
         android:text="Hello"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:padding="8dp"
         android:background="@drawable/background_left"/>
 
