--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -22,6 +22,7 @@
             android:text="Hello"
             android:textSize="18sp"
             android:padding="8dp"
+            android:textColor="@color/white"
             android:background="@drawable/background_right"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"/>
