--- a/app/src/main/res/layout/fragment_chat_detail.xml
+++ b/app/src/main/res/layout/fragment_chat_detail.xml
@@ -16,7 +16,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/pale_blue">
+                android:background="@color/background_color_blue">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
                         android:id="@+id/back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_back_white"/>
+                        android:src="@drawable/ic_back_arrow"/>
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/avatar"
                         android:layout_width="40dp"
@@ -40,8 +40,10 @@
                         android:text="Name"
                         android:textSize="22sp"
                         android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:layout_marginStart="8dp"/>
+                        android:textColor="@color/black"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/instagramsansregular"
+                        />
                 </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
 
