--- a/app/src/main/res/layout/pop_up_address_form.xml
+++ b/app/src/main/res/layout/pop_up_address_form.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:orientation="vertical">
-
-
 <androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="20dp"
@@ -31,9 +25,9 @@
         </ImageView>
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:padding="10dp"
         android:text="Enter Additional Address"
         android:fontFamily="@font/lobster"
@@ -47,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="Address"
             android:textSize="16sp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
             android:padding="5dp"/>
@@ -105,4 +99,3 @@
 </androidx.cardview.widget.CardView>
 
 
-</LinearLayout>
