--- a/app/src/main/res/layout/user_vehicle_card_view.xml
+++ b/app/src/main/res/layout/user_vehicle_card_view.xml
@@ -14,14 +14,14 @@
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/vehicleImageView"
                 android:layout_width="200dp"
                 android:scaleType="centerCrop"
                 android:layout_margin="8dp"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
                 />
         </LinearLayout>
 
@@ -67,9 +67,8 @@
                     android:id="@+id/setDefaultBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="5dp"
+                    android:padding="5dp"
+                    android:layout_marginRight="5dp"
                     android:text="Set as default"
                     >
 
@@ -78,22 +77,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
                 <Button
                     android:id="@+id/edit_button"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Edit"
-                    android:layout_weight="1"
-                    android:layout_marginRight="8dp"
+                    android:padding="5dp"
+                    android:layout_marginRight="5dp"
                     android:backgroundTint="@color/quantum_googgreen"/>
                 <Button
                     android:id="@+id/delete_button"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:layout_marginRight="5dp"
                     android:text="Delete"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="8dp"
+
+
                     android:backgroundTint="@color/light_orange_red"/>
             </LinearLayout>
 
